grub2 (1.99~rc1-3) UNRELEASED; urgency=low

  * Build for ppc64 (except for grub-emu, which doesn't build cleanly yet).
  * Suppress output from debconf-communicate in upgrade-from-grub-legacy.
  * Refer to the info documentation at the top of /etc/default/grub (closes:
    #612538).
  * We need at least freebsd-utils (>= 8.0-4) on kFreeBSD architectures for
    camcontrol, so depend on it.

 -- Colin Watson <cjwatson@debian.org>  Wed, 09 Feb 2011 01:04:06 +0000

grub2 (1.99~rc1-2) unstable; urgency=low

  * Merge 1.98+20100804-13 and 1.98+20100804-14, updating translations:
    - Kazakh (Baurzhan Muftakhidinov / Timur Birsh).
  * mkconfig_skip_dmcrypt.patch: Refer to GRUB_PRELOAD_MODULES rather than
    suggesting people write a /etc/grub.d/01_modules script (thanks, Jordan
    Uggla).
  * Handle empty dir passed to grub_find_root_device_from_mountinfo; fixes
    grub-mkrelpath on btrfs subvolumes (LP: #712029).
  * Add rootflags=subvol=<name> if / is on a btrfs subvolume (LP: #712029).
  * Upload to unstable.

 -- Colin Watson <cjwatson@debian.org>  Tue, 08 Feb 2011 11:39:26 +0000

grub2 (1.99~rc1-1) experimental; urgency=low

  [ Colin Watson ]
  * New upstream release candidate.

  [ Alexander Kurtz ]
  * 05_debian_theme:
    - If we find a background image and no colours were specified, use
      upstream defaults for color_normal and color_highlight rather than
      setting color_normal to black/black.
    - Make the code more readable by replacing code for handling
      alternatives.
    - Make the code for searching for pictures in /boot/grub more readable
      and robust (for example against newlines in the filename).
    - Don't try the other alternatives when $GRUB_BACKGROUND is set; you can
      now add GRUB_BACKGROUND= to /etc/default/grub to force no background
      image (closes: #608263).

 -- Colin Watson <cjwatson@debian.org>  Mon, 17 Jan 2011 13:43:06 +0000

grub2 (1.99~20110112-1) experimental; urgency=low

  * New Bazaar snapshot.